Fix mobile overflow by applying box-sizing: border-box and responsive input width

--- a/css/base.css
+++ b/css/base.css
@@ -13,6 +13,10 @@
 }
 
 /* Overall */
+* {
+    box-sizing: border-box;
+}
+
 html,
 body,
 div#map {
